# rimworld-editor-simplified

./: CMakeLists.txt  main.cpp
data/: constructor.hpp  factory.hpp  game_base.hpp  loader.cpp  loader.hpp  path_constructor.cpp  path_constructor.hpp
data/game/: meta.cpp  meta.hpp
data/game/pawn/: pawn.cpp  pawn.hpp
data/matcher/: abstract_matcher.hpp
sample/: part.rws
xml/: abstract_loader.cpp  abstract_loader.hpp  abstract_writer.cpp  abstract_writer.hpp  loader.cpp  loader.hpp
